eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 867070106920.dkr.ecr.ap-northeast-1.amazonaws.com/simplebank:dc95c206b43d453c5d903b346f11feed2ff7b4fe
          ports:
            - containerPort: 8080
